<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Vipin KT
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/ri_action_refresh" />
    <item
        android:id="@+id/action_add"
        android:title="@string/ri_action_add_row" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/ri_action_delete_table" />
    <item
        android:id="@+id/action_drop"
        android:title="@string/ri_action_drop_table" />
    <item
        android:id="@+id/action_export"
        android:title="@string/ri_action_export" />
    <item
        android:id="@+id/action_custom"
        android:title="@string/ri_action_custom_query" />
</menu>